<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableAutoLoadMore="true"
        app:srlEnableFooterFollowWhenLoadFinished="true">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@color/colorSecondText"
            app:srlDrawableProgress="@drawable/ic_progress_puzzle"
            app:srlEnableLastTime="false"
            app:srlPrimaryColor="@color/colorPrimary"
            app:srlTextFailed="@string/refresh_failed"
            app:srlTextFinish="@string/refresh_finish"
            app:srlTextPulling="@string/refresh_pulling"
            app:srlTextRefreshing="@string/refresh_refreshing"
            app:srlTextRelease="@string/refresh_release" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<com.dengzq.simplerefreshlayout.SimpleRefreshLayout-->
            <!--android:id="@+id/home_refresh"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/home_title">-->

            <androidx.core.widget.NestedScrollView
                android:id="@+id/home_nestedscroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="vertical">

                    <!--头部菜单和Banner    -->
                    <include
                        android:id="@+id/home_top"
                        layout="@layout/fragment_home_top" />

                    <!-- 专区 -->
                    <include layout="@layout/layout_prefecture" />

                    <!-- 智丰头条 -->
                    <include layout="@layout/layout_news" />

                    <include layout="@layout/layout_seckill" />

                    <!--<RelativeLayout-->
                    <!--android:id="@+id/home_promotion_root"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/home_ms_root"-->
                    <!--android:background="@color/whit"-->
                    <!--android:layout_marginTop="10dp">-->

                    <!--<include layout="@layout/home_fragment_promotion"/>-->


                    <!--</RelativeLayout>-->

                    <!--品质生活-->
                    <!--<include layout="@layout/layout_pzsh"/>-->


                    <!--<RelativeLayout-->
                    <!--android:id="@+id/home_quality_root"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/home_promotion_r1">-->

                    <!--&lt;!&ndash; 品质生活的pager &ndash;&gt;-->
                    <!--<include layout="@layout/home_quality"/>-->

                    <!--</RelativeLayout>-->

                    <!--为你推荐-->
                    <include layout="@layout/layout_wntj" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/commendRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


            <include layout="@layout/layout_search" />


        </RelativeLayout>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlDrawableProgress="@drawable/ic_progress_puzzle"
            app:srlFinishDuration="0"
            app:srlTextFailed="@string/load_failed"
            app:srlTextFinish="@string/load_finish"
            app:srlTextLoading="@string/load_loading"
            app:srlTextNothing="@string/load_noting"
            app:srlTextPulling="@string/load_pulling"
            app:srlTextRelease="@string/load_release" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>